# mtgo_utils

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  clean.sh  make.sh  run_tests.sh
.github/workflows/: cmake.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  GoogleTest.cmake  IWYU.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
lib/: CMakeLists.txt
lib/gamelog/: CMakeLists.txt
lib/gamelog/include/gamelog/: gamelog.h
lib/gamelog/src/: gamelog.cpp
lib/mtgo_utils/: CMakeLists.txt
lib/mtgo_utils/include/gamelog/: gamelog.h
lib/mtgo_utils/include/mtgo_utils/: gamelog.h
lib/mtgo_utils/src/: gamelog.cpp
lib/mtgo_utils/tests/: test_gamelog.cpp  test_parsing_gamelog.cpp  test_path_gamelog.cpp
src/: CMakeLists.txt
src/file_parser/: CMakeLists.txt
src/file_parser/src/: file_parser.cpp
src/file_parser/tests/: test_matchgamelog_01.sh  test_matchgamelog_02.sh  test_matchgamelog_03.sh  test_matchgamelog_04.sh  test_no_arguments.sh  test_no_matchgamelog_file.sh  test_nonexisting_file.sh
